--- a/Count-Poisson_regression.ipynb
+++ b/Count-Poisson_regression.ipynb
@@ -814,6 +814,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Initial document has been written by Bumsub."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reference"
    ]
   },
@@ -840,7 +847,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -851,5 +858,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
